
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int deflateInit (int *,int) ;
 int inflateInit (int *) ;
 int memset (char*,int,int) ;
 int sprintf (char*,char*) ;
 int strlen (char*) ;
 int write (int,char*,int ) ;
 int zin ;
 int zout ;

int do_compression(int s)
{
char buf[3000];
int term = 0, i = 0;

deflateInit(&zout, 1);
        inflateInit(&zin);

memset(buf, 0x0, 300);
sprintf(buf, "Gzip-stream 1\n");

write(s, buf, strlen(buf));
}
