; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/remote/extr_301.c_do_compression.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/remote/extr_301.c_do_compression.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@zout = common dso_local global i32 0, align 4
@zin = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"Gzip-stream 1\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_compression(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca [3000 x i8], align 16
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  %7 = call i32 @deflateInit(i32* @zout, i32 1)
  %8 = call i32 @inflateInit(i32* @zin)
  %9 = getelementptr inbounds [3000 x i8], [3000 x i8]* %4, i64 0, i64 0
  %10 = call i32 @memset(i8* %9, i32 0, i32 300)
  %11 = getelementptr inbounds [3000 x i8], [3000 x i8]* %4, i64 0, i64 0
  %12 = call i32 @sprintf(i8* %11, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %13 = load i32, i32* %3, align 4
  %14 = getelementptr inbounds [3000 x i8], [3000 x i8]* %4, i64 0, i64 0
  %15 = getelementptr inbounds [3000 x i8], [3000 x i8]* %4, i64 0, i64 0
  %16 = call i32 @strlen(i8* %15)
  %17 = call i32 @write(i32 %13, i8* %14, i32 %16)
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @deflateInit(i32*, i32) #1

declare dso_local i32 @inflateInit(i32*) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32 @sprintf(i8*, i8*) #1

declare dso_local i32 @write(i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
